browser/base/content/browser-floorp.css
/* ... */
 :root[privatebrowsingmode] #fxa-toolbar-menu-button:hover>.toolbarbutton-badge-stack,
 :root[privatebrowsingmode] #fxa-toolbar-menu-button:not([disabled="true"]):is([open], [checked], :hover:active) > .toolbarbutton-badge-stack {
  background-color: inherit !important;
  filter: brightness(50%);
}

#statusBar:-moz-lwtheme {
  background-color: var(--lwt-accent-color-inactive, var(--toolbar-bgcolor));
}

#statusBar {
  background-color: var(--toolbar-bgcolor);
}

#private-browsing-indicator-with-label {
  display: none !important;
}

#workspace-button > .toolbarbutton-text {
  display: inherit;
  font-weight: bold;
  font-size: 13px;
  border-radius: 0px var(--tab-border-radius) var(--tab-border-radius) 0px !important;
}

#workspace-button > .toolbarbutton-icon {
  border-radius: var(--tab-border-radius) 0px 0px var(--tab-border-radius) !important;
  scale: 1.3;
}
toolbar #workspace-button:not([disabled="true"]):is([open], [checked], :hover:active) > .toolbarbutton-icon,
toolbar #workspace-button:not([disabled="true"], [checked], [open], :active):hover > .toolbarbutton-icon,
toolbar #workspace-button:not([disabled="true"]):is([open], [checked], :hover:active) > .toolbarbutton-text,
toolbar #workspace-button:not([disabled="true"], [checked], [open], :active):hover > .toolbarbutton-text
{
  background: none !important;
  background-color: unset !important;
}

#workspace-button[open="true"] {
  background: var(--toolbarbutton-active-background);
  border-radius: var(--tab-border-radius);
}

#workspace-menu {
  width: 250px;
  margin-left: 5px;
}

.workspace-item > .toolbarbutton-icon {
  height: 35px !important;
  width: 35px !important;
  display: block;
  visibility: hidden;
  background: none !important;
}

.workspace-item > .toolbarbutton-text {
  display: inherit;
  font-weight: bold;
  margin-top: auto;
  background: none !important;
  margin-bottom: auto;
  font-size: larger;
}

#workspace-delete {
  width: 20%;
}

.workspace-item {
  border-radius: 5px;
  margin-right: 3px !important;
  list-style-image: url("chrome://browser/skin/workspace-menu-check.svg");
}

.workspace-item-box {
  margin: 5px;
}

.workspace-item:hover {
  background: var(--toolbarbutton-hover-background);
}

.workspace-item:hover:active {
  background: var(--toolbarbutton-active-background);
}

.workspace-item > .toolbarbutton-text:hover{
  background: none !important;
  background-color: unset !important;
}


.workspace-item-box > .toolbarbutton-text {
  font-size: 15px;
  font-weight: bold;
}

.workspace-item {
  width: 80%;
  min-height: 35px;
}

#addNewWorkspaceButton {
  height: 30px !important;
  margin: 5px;
}

#addNewWorkspaceButton > .toolbarbutton-text {
  font-size: larger;
}

#workspace-delete > .toolbarbutton-icon {
  list-style-image: url("chrome://browser/skin/lepton/dismiss-filled.svg");
}

#workspace-button{
  transition:all 0.2s ease !important;
  appearance:none !important;
  border-right: 1px solid color-mix(in srgb, currentColor 25%, transparent);
}
#workspace-button:hover{
  color:inherit;
  background-color: color-mix(in srgb, currentColor 11%, transparent) !important;
}

:root[inDOMFullscreen] :is(#workspace-button),
:root[inFullscreen]:not([macOSNativeFullscreen]) :is(#workspace-button),
*|*:root[chromehidden~="toolbar"] #workspace-button {
  display: none;
}

#customizableui-special-spring1 , #customizableui-special-spring2,
#wrapper-customizableui-special-spring1 , #wrapper-customizableui-special-spring2
{
  display: none !important;
}

:root[inDOMFullscreen] :is(.browserContainer) > .browserStack > *,
:root[inFullscreen]:not([macOSNativeFullscreen]) :is(.browserContainer) > .browserStack > * {
  border: none !important;
  border-radius: 0 !important;
}

:root[inFullscreen]:not([macOSNativeFullscreen]) #tabbrowser-tabbox[flex],
:root[inFullscreen]:not([macOSNativeFullscreen]) #tabbrowser-tabpanels[flex] {
  clip-path: inset(0px 0px 0px round 0 0) !important;
  border-radius: 0 !important;
  border: none !important;
}

:root[inFullscreen]:not([macOSNativeFullscreen]) .browser-sidebar2[style] {
  border: none !important;
}

.tabbrowser-tab[label="Floorp View"] {
  display: none;
}

#profile-switcher-browser {
  min-width: 25em !important;
  min-height: 41em !important;
}

#profile-manager {
  list-style-image: url("chrome://browser/skin/fxa/avatar-color.svg");
}

#select-floorp__tst {
  display: none;
}

#qrcode-img-vbox > * {
  border-radius: 10px;
  margin: 10px;
}

#QRCodeGeneratePageAction-image {
  list-style-image: url("chrome://browser/skin/floorp-share.svg");
}

